# windows-ddc

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  app.py  autostart.py  build_exe.ps1  ddc.py  diagnostics.py  gui.py  main.py  overlay.py  pyproject.toml  settings.py  theme.py  windows_platform.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
tests/: test_autostart.py  test_autostart_gui.py  test_ci_workflow.py  test_diagnostics.py  test_hotkey_safety.py  test_identity_and_settings.py  test_overlay.py  test_resilience.py  test_revalidation.py  test_single_instance.py  test_theme_accessibility.py  test_tray_safety.py
